Add initial instructions for Linux